@@ -37,7 +37,7 @@ extern "C" {
 
 	/* ---- Function Prototypes */
 
-#if defined(WIN32) || defined(WIN64)
+#ifdef _MSC_VER
 #  if defined(DLL_EXPORT) && !defined(LIBSDL_GFX_DLL_IMPORT)
 #    define SDL_ROTOZOOM_SCOPE __declspec(dllexport)
 #  else
